# synthbeans-python

./: Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml  synthbean.py
conf/: settings.ini  synthbean.yml
synthbean/: __init__.py  config.py
synthbean/processors/: __init__.py
synthbean/resources/: easter.py
tests/: test_processors.py
